<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item android:id="@+id/search_bar"
    android:icon="@drawable/baseline_auto_fix_high_24"
    android:title = "@string/search"
    app:showAsAction = "always"
    app:actionViewClass = "android.widget.SearchView"
    />
    <item android:id="@+id/profile_button"
        android:title = "@string/profile"
        android:icon="@drawable/account"
        app:showAsAction = "always"
        />
    <item android:id="@+id/setting_button"
        android:title = "@string/settings"
        app:showAsAction = "never"
        />
    <item android:id="@+id/logout"
        android:title = "@string/kijelentkez_s"
        android:icon="@drawable/logout"
        app:showAsAction = "always"
        />


</menu>