<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    tools:context=".RegisterActivity"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/registrationtextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginVertical="10pt"
        android:layout_marginStart="5pt"
        android:layout_marginTop="5pt"
        android:layout_marginEnd="5pt"
        android:layout_marginBottom="5pt"
        android:text="@string/regisztráció"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <EditText
        android:id="@+id/editTextTextUserName"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_below="@+id/registrationtextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="42dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="62dp"
        android:autofillHints="username"
        android:ems="10"
        android:hint="@string/felhasználónév"
        android:inputType="textPersonName"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_below="@+id/editTextTextUserName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="102dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="98dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/jelszó"
        android:inputType="textPassword"
        tools:ignore="LabelFor,TextFields" />

    <EditText
        android:id="@+id/editTextTextPasswordRepeat"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@+id/editTextTextPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="102dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="98dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/jelszómegerősítése"
        android:inputType="textPassword"
        tools:ignore="LabelFor,TextFields" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="67dp"
        android:layout_below="@+id/editTextTextPasswordRepeat"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="102dp"
        android:layout_marginTop="-12dp"
        android:layout_marginEnd="98dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/email_cím"
        android:inputType="textEmailAddress"
        tools:ignore="LabelFor,TextFields" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextEmailAddress"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/regisztráció"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toBottomOf="@id/editTextEmailAddress"
        android:onClick="register" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/mégse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button"
        android:onClick="undo" />

</RelativeLayout>